# semantic-release-cargo

./: .envrc  .gitignore  .prettierignore  .releaserc.json  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  index.d.ts  index.js  package-lock.json  package.json
.github/: mergify.yml  renovate.json
.github/workflows/: audit.yml  automerge.yml  ci.yml  release.yml
nix/: default.nix  flake.nix
src/: error.rs  itertools.rs  lib.rs  logger.rs  main.rs
test_data/basic/: Cargo.toml
test_data/basic_with_cargo_config/: Cargo.toml
test_data/basic_with_cargo_config/.cargo/: config.toml
test_data/cycle/: Cargo.toml
test_data/cycle/dep1/: Cargo.toml
test_data/dependencies/: Cargo.toml
test_data/dependencies_alternate_registry/: Cargo.toml
test_data/dependencies_alternate_registry/.cargo/: config.toml
test_data/dependencies_alternate_registry/build1/: Cargo.toml
test_data/dependencies_alternate_registry/dep1/: Cargo.toml
test_data/dependencies_with_aliased_pkg/: Cargo.toml
test_data/dependencies_with_aliased_pkg/build1/: Cargo.toml
test_data/dependencies_with_aliased_pkg/dep1/: Cargo.toml
test_data/dependencies_with_explicit_version/: Cargo.toml
test_data/dependencies_with_explicit_version/dev1/: Cargo.toml
test_data/git_dep/: Cargo.toml
test_data/git_dep_version/: Cargo.toml
test_data/target_dep/: Cargo.toml
tests/: error_tests.rs  listpkg.rs  prepare.rs  verify.rs  verify_no_env.rs  verify_with_chdir.rs
vendored-itertools/: Cargo.toml
vendored-itertools/src/: group_map.rs  groupbylazy.rs  lib.rs
