[package]
name = "semantic-release-cargo"
version = "2.4.66"
authors = [
  "Steven Bosnick <sbosnick@sympatico.ca>",
  "Eric Crosson <eric.s.crosson@utexas.edu>",
]
edition = "2021"
description = "A CLI to integrate Rust into a semantic-release workflow."
readme = "README.md"
repository = "https://github.com/semantic-release-cargo/semantic-release-cargo"
license = "MIT OR Apache-2.0"
keywords = ["release", "semantic-release", "command-line-tool"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = [
  "artifacts",
  "dist",
  ".envrc",
  "flake.lock",
  "flake.nix",
  ".github",
  ".gitignore",
  "index.d.ts",
  "index.js",
  "node_modules",
  "package.json",
  "package-lock.json",
  ".releaserc.json",
  "semantic-release-cargo",
  "semantic-release-cargo.darwin-arm64.node",
  "semantic-release-cargo.darwin-x64.node",
  "semantic-release-cargo.linux-x64-gnu.node",
]

[lib]
name = "semantic_release_cargo"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "semantic-release-cargo"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.99"
guppy = "=0.17.21"
log = { version = "=0.4.28", features = ["std"] }
napi = { version = "=2.16.17", features = ["error_anyhow"], optional = true }
napi-derive = { version = "=2.16.13", optional = true }
serde_json = "=1.0.145"
serde = { version = "=1.0.223", features = ["derive"] }
clap = { version = "=4.5.47", features = ["cargo", "derive"] }
thiserror = "=1.0.69"
toml_edit = "=0.22.26"
url = { version = "=2.5.7", features = ["serde"] }
cargo-config2 = "=0.1.36"

[build-dependencies]
napi-build = { version = "=2.2.3", optional = true }

[dev-dependencies]
assert_matches = "=1.5.0"
tempfile = "=3.22.0"
fs_extra = "=1.3.0"
semver = "=1.0.27"

[features]
napi-rs = ["napi", "napi-build", "napi-derive"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[[test]]
name = "listpkg"
harness = false
