[package]
name = "dependencies"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep1 = {path = "dep1"}

[build-dependencies]
build1 = {path = "build1"}

[workspace]
