[package]
name = "dependencies_with_aliased_pkg"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep_one = { version = "0.1.0", path = "dep1", package = "dep1" }

[build-dependencies]
build_one = { version = "0.1.0", path = "build1", package = "build1" }

[workspace]
