[package]
name = "dependencies_with_explicit_version"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep1 = { version = "0.1.0", path = "dep1" }

[build-dependencies]
build1 = { version = "0.1.0", path = "build1" }

[dev-dependencies]
dev1 = { version = "0.1.0", path = "dev1" }

[workspace]
