[package]
name = "git_dep"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "=0.5.6", git = "https://github.com/tokio-rs/bytes.git"}

[workspace]
